--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ file type: viewer
 - txt,csv -> flat text
 - images -> browser
 
-
+make parts of signature optional (for example extension in file)
 
 check validateContent @ onChange
 - for element : block patch and set css classes
