--- a/factory/TODO
+++ b/factory/TODO
@@ -1,12 +1,10 @@
 TODO
 
-?raw option to get raw content for single entity (error if multiple requested)
+file: query options to display raw content with mime header
 - add content type mime header
 
 date type
  - render to string
-
-
 
 filtering & searching :
 - implement full blown boolean expressions
@@ -41,7 +39,6 @@ testing
 
  const jsdom = require("jsdom");
  const { JSDOM } = jsdom;
-
 
 
 
