--- a/factory/TODO
+++ b/factory/TODO
@@ -1,6 +1,8 @@
 TODO
 
 - per property access control
+- deactivate/hide edit rows for properties you're not allowed to edit
+- deactivate/hide edit/delete button if you do not have permission
 
 auto/readOnly for property
 - add session groups property hidden/auto to session
@@ -22,8 +24,6 @@ fix sign-up flow
 - auto fill in username after sign up
 - make sure session is visible after sign in
 
-"datumprikker" for date type
-
 timeline : ensure labels do not overlap and do not go outside wrapper
 - constraints
 - - no overlap
@@ -32,11 +32,6 @@ timeline : ensure labels do not overlap and do not go outside wrapper
 
 timeline
 - create new item by clicking on the line (display date on hover)
-
-- options:
-- - move along line
-- - move to other side of line
-- - move away from line
 
 - add unique setting to array
 
