--- a/factory/TODO
+++ b/factory/TODO
@@ -1,11 +1,13 @@
 TODO
 
-- per property access control
-- deactivate/hide edit rows for properties you're not allowed to edit
+per property access control
+- creator: deactivate/hide edit rows for properties you're not allowed to creat
+- edit: deactivate/hide rows for properties you're not allowed to edit
+- view: deactivate/hide rows for properties you're not allowed to read
 - deactivate/hide edit/delete button if you do not have permission
 
-auto/readOnly for property
-- add session groups property hidden/auto to session
+
+permissionVerbsToMethods: single source of truth with access.php
 
 - maak references klikbaar -> select as variable
 - - reference gebruik laten maken van display.select
