--- a/factory/TODO
+++ b/factory/TODO
@@ -1,6 +1,6 @@
 TODO
 
-- refresh state
+- hide passwords from api get (system only)
 
 - display: deactivate/hide edit rows for properties you're not allowed to see
 - edit: deactivate/hide rows for properties you're not allowed to edit
@@ -42,6 +42,8 @@ replace createTmpContentToValidate in render.js with ability to validate subData
 validate @ Item.patch to set status to faulty
 
 type toString function for sorting
+
+refresh state more efficiently: subscription
 
 display
 - filter content before passing to display functions
