--- a/factory/TODO
+++ b/factory/TODO
@@ -1,5 +1,11 @@
 TODO
 
+search/display
+- update search so it only searches content, not propertynames
+- add search to  ./xyz "/fruit?search=green"
+- fix this: http://localhost:8000/ui/item/fact?search=jaar
+- fix this: http://localhost:8000/ui/item/fact?search=$search
+
 fix sign-up flow
 - show errors if create/login fails
 - auto fill in username after sign up
