First Feedback fixes
Remove source notes, change cancel to done, create to add

--- a/factory/TODO
+++ b/factory/TODO
@@ -1,5 +1,26 @@
 TODO
 
+bij add fact blijft het laatst gekozen bestand geselecteerd waardoor onduidelijk is of je een bestand hebt geselecteerd of niet.
+
+onderliggende sources aanpassen kan nog helemaal niet.
+
+Inloggen in firefox lukt wel maar geeft geen actieve interface, d.w.z. source-list en timeline worden niet geladen, upload source is inactief. In chromium werkt t wel.
+
+je kunt maar één keer een bron toevoegen, een tweede keer lukt niet, daarvoor moet je eerst de pagina herladen.
+twee keer een bestand met dezelfde naam uploaden geeft geen foutmelding.
+
+verwijderen van een source lukt niet.
+edit source werkt niet.
+
+in de layout is verwarrend dat source view en fact view onder elkaar staan alsof ze wat met elkaar te maken hebben terwijl de link eigenlijk is tussen selected source en source view resp selected fact en fact view.
+
+remove/change facts in timeline dynamically
+
+array/object
+- delete values
+
+
+
 search/display
 - fix this: http://localhost:8000/ui/item/fact?search=jaar
 - fix this: http://localhost:8000/ui/item/fact?search=$search
@@ -16,7 +37,6 @@ RBAC
 - edit: deactivate/hide rows for properties you're not allowed to edit
 - view: deactivate/hide rows for properties you're not allowed to read
 
-remove/change facts in timeline dynamically
 
 deleteButton -> get a popup to confirm
 
@@ -44,9 +64,6 @@ refresh state more efficiently: subscription
 
 display
 - filter content before passing to display functions
-
-array/object
-- delete values
 
 drag&drop: als er een reference input veld is dan worden die entities sleepbaar (array for multiple)
 
