--- a/factory/TODO
+++ b/factory/TODO
@@ -9,12 +9,11 @@ Inloggen in firefox lukt wel maar geeft geen actieve interface, d.w.z. source-li
 je kunt maar één keer een bron toevoegen, een tweede keer lukt niet, daarvoor moet je eerst de pagina herladen.
 twee keer een bestand met dezelfde naam uploaden geeft geen foutmelding.
 
-verwijderen van een source lukt niet.
 edit source werkt niet.
 
 in de layout is verwarrend dat source view en fact view onder elkaar staan alsof ze wat met elkaar te maken hebben terwijl de link eigenlijk is tussen selected source en source view resp selected fact en fact view.
 
-remove/change facts in timeline dynamically
+change facts in timeline dynamically
 
 array/object
 - delete values
