--- a/factory/TODO
+++ b/factory/TODO
@@ -1,13 +1,8 @@
 TODO
 
-> don't block PUT, but do a HEAD call in the UI before submit to check availability
-twee keer een bestand met dezelfde naam uploaden geeft geen foutmelding.
-
-
 bij add fact blijft het laatst gekozen bestand geselecteerd waardoor onduidelijk is of je een bestand hebt geselecteerd of niet.
 
 Inloggen in firefox lukt wel maar geeft geen actieve interface, d.w.z. source-list en timeline worden niet geladen, upload source is inactief. In chromium werkt t wel.
-
 
 edit source werkt niet.
 
@@ -33,10 +28,11 @@ RBAC
 - edit: deactivate/hide rows for properties you're not allowed to edit
 - view: deactivate/hide rows for properties you're not allowed to read
 
-
 deleteButton -> get a popup to confirm
 
 test using "de bevoegde instanties" data
+
+cli : enable session using file connector
 
 timeline : ensure labels do not overlap and do not go outside wrapper
 - constraints
